--- a/languages/bea-acf-options-for-polylang-fr_FR.po
+++ b/languages/bea-acf-options-for-polylang-fr_FR.po
@@ -5,37 +5,33 @@ msgstr ""
 "Project-Id-Version: ACF Options for Polylang 1.1.7\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/acf-options-for-"
 "polylang\n"
+"POT-Creation-Date: 2019-05-07 06:12+0200\n"
+"PO-Revision-Date: 2019-05-07 06:13+0200\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-05-05T16:09:29+00:00\n"
-"PO-Revision-Date: 2019-05-05 18:20+0200\n"
 "X-Generator: Poedit 2.2.1\n"
 "X-Domain: bea-acf-options-for-polylang\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Language: fr\n"
 
-#. Plugin Name of the plugin
-msgid "ACF Options for Polylang"
-msgstr "Options ACF pour Polylang"
+#. translators: %s: current language name
+#: classes/admin.php:32
+#, php-format
+msgid "You are changing the options for language %s"
+msgstr "Vous changez les options pour la langue %s"
 
-#. Plugin URI of the plugin
-msgid "https://github.com/BeAPI/acf-options-for-polylang"
-msgstr "https://github.com/BeAPI/acf-options-for-polylang"
-
-#. Description of the plugin
-msgid "Add ACF options page support for Polylang."
-msgstr "Ajout de la prise en charge des pages d’options ACF pour Polylang."
-
-#. Author of the plugin
-msgid "Be API"
-msgstr "Be API"
-
-#. Author URI of the plugin
-msgid "https://beapi.fr"
-msgstr "https://beapi.fr"
+#: classes/admin.php:34
+msgid ""
+"<strong>Be careful</strong>, you are going to modify the untranslated "
+"options, they will probably be used as defaults if the translation is not "
+"completed."
+msgstr ""
+"<strong>Soyez prudent</strong>, vous allez modifier les options non "
+"traduites, elles seront probablement utilisées comme valeurs par défaut si "
+"la traduction n’est pas terminée."
 
 #: classes/requirements.php:16
 msgid "Advanced Custom Fields and Polylang are required plugins."
@@ -45,16 +41,22 @@ msgstr "Les extensions Advanced Custom Fields et Polylang sont requises."
 msgid "Advanced Custom Fields should be on version 5.6.0 or above."
 msgstr "Advanced Custom Fields doit être sur la version 5.6.0 ou supérieure."
 
-#. translators: %s: current language name
-#: classes/admin.php:29
-msgid "You are changing the options for language %s"
-msgstr "Vous changez les options pour la langue %s"
+#. Plugin Name of the plugin/theme
+msgid "ACF Options for Polylang"
+msgstr "Options ACF pour Polylang"
 
-#: classes/admin.php:31
-msgid ""
-"<strong>Be careful</strong>, you are going to modify the initial options, "
-"they will <span style=\"color:red\">not be used</span> by any language."
-msgstr ""
-"<strong>Soyez prudent</strong>, vous allez modifier les options initiales, "
-"elles <span style=\"color: red\">ne seront utilisées</span> par aucune "
-"langue."
+#. Plugin URI of the plugin/theme
+msgid "https://github.com/BeAPI/acf-options-for-polylang"
+msgstr "https://github.com/BeAPI/acf-options-for-polylang"
+
+#. Description of the plugin/theme
+msgid "Add ACF options page support for Polylang."
+msgstr "Ajout de la prise en charge des pages d’options ACF pour Polylang."
+
+#. Author of the plugin/theme
+msgid "Be API"
+msgstr "Be API"
+
+#. Author URI of the plugin/theme
+msgid "https://beapi.fr"
+msgstr "https://beapi.fr"
