--- a/languages/bea-acf-options-for-polylang.pot
+++ b/languages/bea-acf-options-for-polylang.pot
@@ -1,37 +1,37 @@
-# Copyright (C) 2019 Be API
-# This file is distributed under the same license as the ACF Options for Polylang plugin.
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: ACF Options for Polylang 1.1.7\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/acf-options-for-polylang\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Project-Id-Version: ACF Options for Polylang\n"
+"POT-Creation-Date: 2019-05-07 06:12+0200\n"
+"PO-Revision-Date: 2019-05-07 06:12+0200\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2019-05-05T16:09:29+00:00\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"X-Generator: WP-CLI 2.1.0\n"
-"X-Domain: bea-acf-options-for-polylang\n"
+"X-Generator: Poedit 2.2.1\n"
+"X-Poedit-Basepath: ..\n"
+"X-Poedit-Flags-xgettext: --add-comments=translators:\n"
+"X-Poedit-WPHeader: bea-acf-options-for-polylang.php\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
+"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPathExcluded-0: *.js\n"
 
-#. Plugin Name of the plugin
-msgid "ACF Options for Polylang"
+#. translators: %s: current language name
+#: classes/admin.php:32
+#, php-format
+msgid "You are changing the options for language %s"
 msgstr ""
 
-#. Plugin URI of the plugin
-msgid "https://github.com/BeAPI/acf-options-for-polylang"
-msgstr ""
-
-#. Description of the plugin
-msgid "Add ACF options page support for Polylang."
-msgstr ""
-
-#. Author of the plugin
-msgid "Be API"
-msgstr ""
-
-#. Author URI of the plugin
-msgid "https://beapi.fr"
+#: classes/admin.php:34
+msgid ""
+"<strong>Be careful</strong>, you are going to modify the untranslated "
+"options, they will probably be used as defaults if the translation is not "
+"completed."
 msgstr ""
 
 #: classes/requirements.php:16
@@ -42,11 +42,22 @@ msgstr ""
 msgid "Advanced Custom Fields should be on version 5.6.0 or above."
 msgstr ""
 
-#. translators: %s: current language name
-#: classes/admin.php:29
-msgid "You are changing the options for language %s"
+#. Plugin Name of the plugin/theme
+msgid "ACF Options for Polylang"
 msgstr ""
 
-#: classes/admin.php:31
-msgid "<strong>Be careful</strong>, you are going to modify the initial options, they will <span style=\"color:red\">not be used</span> by any language."
+#. Plugin URI of the plugin/theme
+msgid "https://github.com/BeAPI/acf-options-for-polylang"
+msgstr ""
+
+#. Description of the plugin/theme
+msgid "Add ACF options page support for Polylang."
+msgstr ""
+
+#. Author of the plugin/theme
+msgid "Be API"
+msgstr ""
+
+#. Author URI of the plugin/theme
+msgid "https://beapi.fr"
 msgstr ""
